k8s/cluster_config/csh-ing.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: csh-ui-ingress
  namespace: nfdi4health
  annotations:
    kubernetes.io/ingress.class: "nginx"
    nginx.ingress.kubernetes.io/proxy-buffer-size: 12k
    nginx.ingress.kubernetes.io/proxy-body-size: 5g
spec:
  rules:
    - host: csh.nfdi4health.de
      http:
        paths:
        - path: /api
          pathType: Prefix
          backend:
            service:
              name: csh-ui-blue-backend
              port:
                number: 5000
        - path: /resource
          pathType: Prefix
          backend:
            service:
              name: csh-ui-blue-frontend-seo
              port:
                number: 3000
        - path: /
          pathType: Prefix
          backend:
            service:
              name: csh-ui-blue-frontend
              port:
                number: 80
